# dev-patterns

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  README.md  mise.toml  pyproject.toml
.github/: copilot-instructions.md  settings.yml
.github/workflows/: bump.yml  ci.yml  ghas-scan.yml  pr-check.yml  release.yml
.mise/tasks/: build  compile  run
.mise/tasks/bump/: major  minor  patch  prerel
.mise/tasks/ci/: all
.mise/tasks/patterns/: subscribe  sync
.mise/tasks/test/: cov
lib/deno1a/hooks/: commit-msg  githooks.toml  pre-commit  pre-push
lib/deno1a/mise/: mise.toml
lib/deno1a/mise/tasks/: build  completions  execute  install  run  typecheck
lib/deno1a/mise/tasks/bump/: major  minor  patch  prerel
lib/deno1a/mise/tasks/ci/: all
lib/deno1a/mise/tasks/deno/: bundle  compile  upgrade
lib/deno1a/mise/tasks/dispatch/: autobump  configure  ghas
lib/deno1a/mise/tasks/fmt/: _default  check  fix
lib/deno1a/mise/tasks/gh/: token
lib/deno1a/mise/tasks/hooks/: install  sync
lib/deno1a/mise/tasks/lint/: _default  check  fix
lib/deno1a/mise/tasks/npm/: reset-registry  set-registry
lib/deno1a/mise/tasks/patterns/: check-hash  setup  subscribe  sync
lib/deno1a/mise/tasks/project/: init
lib/deno1a/mise/tasks/scan/: complexity  deps  ghas  sast
lib/deno1a/mise/tasks/sync/: down  up
lib/deno1a/mise/tasks/tag/: _default  clean  create  fetch  list  push  remote  sync
lib/deno1a/mise/tasks/test/: _default  cov  watch
lib/deno1a/mise/tasks/vcs/: protect
lib/deno1a/mise/tasks/version/: _default  init  show  sync
lib/deno1a/scripts/: sync_patterns.sh
lib/deno1a/skel/: AGENTS.md  README.md  mise.toml
lib/deno1a/skel/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  settings.yml
lib/deno1a/skel/.github/workflows/: ci.yml  dispatch-sync-down.yml  dispatch-sync-up.yml  pr-check.yml
lib/python3a/hooks/: githooks.toml
lib/python3a/mise/: mise.toml
lib/python3a/mise/tasks/patterns/: check-hash  setup
scripts/: sync_patterns.py  sync_patterns.sh
src/dev_patterns/: __init__.py  __main__.py  version.py
src/dev_patterns/commands/: __init__.py  hooks.py  sync.py
src/dev_patterns/core/: __init__.py  base.py  ui.py
src/dev_patterns/hooks/: __init__.py  installer.py  manifest.py
src/dev_patterns/sync/: __init__.py  client.py  engine.py
src/dev_patterns/version_spec/: __init__.py  resolver.py
tests/: conftest.py  test_commands.py  test_hooks_installer.py  test_hooks_manifest.py  test_main.py  test_sync_engine.py  test_sync_script.py  test_ui.py  test_version.py  test_version_spec.py
